No longer having motion lo res recordings selectable in addtion to the nginx lo res recordings. Now using motion low res recordings in place of the nginx ones. nginx still provides the HD recordings. The one second gap between triggering the HD and low res recordings on nginx appeared not to be sufficient on the Raspberry pi.

--- a/client/src/app/recording-control/recording-control.component.scss
+++ b/client/src/app/recording-control/recording-control.component.scss
@@ -58,13 +58,3 @@ div.delete-button-set
         }
     }
 }
-
-div.recording-indicator
-{
-  margin-top: 0.5rem;
-  width: fit-content;
-  padding: 0.3rem;
-  background-color: black;
-  -webkit-box-shadow: 5px 5px 15px 5px #000000;
-  box-shadow: 5px 5px 15px 5px #000000;
-}
